Fixing mobile alignment

--- a/src/Background.css
+++ b/src/Background.css
@@ -10,6 +10,8 @@ body {
 	min-height: 100vh;
 	font-family:  "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif, system-ui;
 	overflow-x: hidden;
+	width: 100%;
+	position: relative;
 }
 
 :is(h1, h2) {
@@ -17,7 +19,7 @@ body {
 }
 
 .bleed-canvas {
-	width: 100vw;
+	width: 100%;
 	height: 100%;
 	position: absolute;
 }
@@ -41,9 +43,9 @@ body {
 	background: url(./assets/dark-gradient-bg.jpg);
 	background-size: cover;
 	background-position: center;
-	width: 100vw;
-	margin-left: 50%;
-	transform: translateX(-50%);
+	width: 100%;
+	margin-left: 0;
+	transform: none;
 	position: relative;
 	height: 100vh;
 }
